fix: invisible and hidden in todo

--- a/todoapp/static/css/style.css
+++ b/todoapp/static/css/style.css
@@ -143,8 +143,12 @@ img, picture, svg, video, canvas{
     display: flex;
 }
 
-.hidden {
+.invisible {
     visibility: hidden;
+}
+
+.hidden {
+    display: none;
 }
 
 
